# py-json

./: LICENSE  pyproject.toml  test.sh
src/py_json/: json.py  lexer.py  parser.py  serializer.py  symbols.py
tests/: test_lexer.py
